--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,14 +1,18 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    {% load crispy_forms_tags %}
-  </head>
-  <body>
+{% extends 'base.html' %}{% include 'messages.html'%}
+{% load crispy_forms_tags %}
+{% block content %}
     <div class="" style="float:right;">
+      <h3>{{user}}</h3>
       <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
 
+      <div class="">
+        {{follo.following}}
+
+      </div>
+      <div class="">
+        <a href="{% url 'all_users'%}" class="btn btn-primary">All users</a>
+
+      </div>
     </div>
     <form class="" action="" method="post">{% csrf_token %}
       {{ form | crispy }}
@@ -17,7 +21,7 @@
     <div class="col-lg-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Employee Details</h4>
+                  <h4 class="card-title">User Details</h4>
                   <p class="card-description"><code></code></p>
                   <div class="table-responsive">
                     <table class="table table-striped">
@@ -33,7 +37,7 @@
                           {% for post in posts %}
                         <tr>
                           <th scope="row">{{forloop.counter}}</th>
-                          <td> {{post.user.username}} </td>
+                          <td> <a href="{% url 'profile' post.user.id %}">{{post.user.username}}</a> </td>
                           <td>{{post.post}}</td>
                           <td><a href="{% url 'follow' post.user.id %}">Follow</a></td>
 
@@ -50,5 +54,4 @@
 
 
 
-  </body>
-</html>
+{% endblock %}
